--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - FLASK_APP=app.py
       - FLASK_RUN_HOST=0.0.0.0
       - DATABASE_URL=postgresql://flaskuser:flaskpass@db:5432/flaskdb
+    env_file:
+      - .env
     depends_on:
       - db
 
