--- a/myapp/requirements.txt
+++ b/myapp/requirements.txt
@@ -1,5 +1,21 @@
-flask-wtf>=1.2.2
-flask>=3.1.2
-flask-login>=0.6.3
-werkzeug>=3.1.3
-psycopg2-binary>=2.9.11
+Authlib==1.6.5
+blinker==1.9.0
+certifi==2025.10.5
+cffi==2.0.0
+charset-normalizer==3.4.4
+click==8.3.0
+cryptography==46.0.3
+Flask==3.1.2
+Flask-Login==0.6.3
+Flask-WTF==1.2.2
+idna==3.11
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.3
+psycopg2-binary==2.9.11
+pycparser==2.23
+python-dotenv==1.2.1
+requests==2.32.5
+urllib3==2.5.0
+Werkzeug==3.1.3
+WTForms==3.2.1
