--- a/myapp/requirements.txt
+++ b/myapp/requirements.txt
@@ -7,6 +7,7 @@ click==8.3.0
 cryptography==46.0.3
 Flask==3.1.2
 Flask-Login==0.6.3
+Flask-Mail==0.10.0
 Flask-WTF==1.2.2
 idna==3.11
 itsdangerous==2.2.0
